Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gloogatewaytst-service
spec:
  type: LoadBalancer
  selector:
    app: gloogatewaytst
  ports:
  - port: 80
    targetPort: 5002
